[workspace]
resolver = "2"

members = ["actix", "core", "example"]

[workspace.dependencies]
# Local
jwe-actix-middleware = { path = "actix" }
jwe-core = { path = "core" }

# External
actix-http = "3.5.1"
actix-web = "4.4.1"
anyhow = "1.0.79"
biscuit = "0.7.0"
futures-util = "0.3.30"
num-bigint = "0.4.4"
rand = { version = "0.8.5" }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
