[package]
name = "jwe-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biscuit = { version = "0.7", optional = true }
rand = { version = "0.8", optional = true }
thiserror = { version = "1", optional = true }

[features]
default = []
biscuit = ["dep:biscuit", "dep:rand", "dep:thiserror"]
