[package]
name = "jwe-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biscuit = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = []
biscuit = ["dep:biscuit", "dep:rand", "dep:thiserror"]
