[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
jwe-core = { workspace = true, features = ["biscuit"] }
jwe-actix-middleware = { workspace = true }

# External
actix-http = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
num-bigint = { workspace = true }
biscuit = { workspace = true }
reqwest = { workspace = true }
